--- a/style.css
+++ b/style.css
@@ -1398,7 +1398,7 @@ strong{
   width: 100%;
   border-radius: 20px;
   background-color: blueviolet;
-  background-image: url(images/badone.png);
+  background-image: url(https://res.cloudinary.com/dfzu9bhdd/image/upload/v1769698449/badone_okss5q.png);
   background-size: cover;
   margin-bottom: 4px;
 }
@@ -1408,7 +1408,7 @@ strong{
   width: 100%;
   border-radius: 20px;
   background-color: blueviolet;
-  background-image: url(images/shopify\ store\ 2.png);
+  background-image: url(https://res.cloudinary.com/dfzu9bhdd/image/upload/v1769698499/shopify_store_1_ezfixm.png);
   background-size: cover;
   margin-bottom: 4px;
 }
@@ -1418,7 +1418,7 @@ strong{
   width: 100%;
   border-radius: 20px;
   background-color: blueviolet;
-  background-image: url(images/shopify\ store\ 1.png);
+  background-image: url(https://res.cloudinary.com/dfzu9bhdd/image/upload/v1769698515/shopify_store_2_lorgq7.png);
   background-size: cover;
   margin-bottom: 4px;
 }
@@ -1428,7 +1428,7 @@ strong{
   width: 100%;
   border-radius: 20px;
   background-color: blueviolet;
-  background-image: url(images/shopify\ store\ 3.png);
+  background-image: url(https://res.cloudinary.com/dfzu9bhdd/image/upload/v1769698693/shopify_store_3_cercnh.png);
   background-size: cover;
   margin-bottom: 4px;
 }
