--- a/style.css
+++ b/style.css
@@ -1826,7 +1826,7 @@ strong{
 @media (min-width: 219px) and (max-width: 719px){
   .top-head{
     width: 100%;
-    height: 45px;
+    /* height: 45px; */
     background-color: var(--bg-Color);
     display: flex;
     justify-content: center;
@@ -1840,9 +1840,9 @@ strong{
     gap: 5px;
   }
   .left-text button{
-    padding: 6px 12px;
+    /* padding: 6px 12px; */
     border: none;
-    border-radius: 6px;
+    /* border-radius: 6px; */
     color: white;
     font-size: 12px;
     font-weight: 500;
@@ -1899,8 +1899,8 @@ strong{
     padding: 0px 5px;
   }
   .head-content .header-content{
-    height: 100vh;
-    margin: 10px 0px;
+    /* height: 100vh; */
+    /* margin: 10px 0px; */
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -1908,7 +1908,7 @@ strong{
     gap: 5px;
   }
   .head-content .header-content h1{
-    margin-top: 100px;
+    /* margin-top: 100px; */
     font-size: 32px;
     font-weight: 800;
     line-height: 55px;
@@ -1919,7 +1919,7 @@ strong{
     font-weight: 400;
   }
   .head-content .checklist{
-    margin-bottom: 60px;
+    /* margin-bottom: 60px; */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -1956,7 +1956,7 @@ strong{
 
 video {
   width: 100%;
-  height: 200px;
+  height: 230px;
   object-fit: cover;
   border-bottom-right-radius: 10px;
   border-bottom-left-radius: 10px;
@@ -1982,7 +1982,7 @@ video {
   cursor: pointer;
   z-index: 3;
   transition: opacity 0.3s ease;
-  height: 200px;
+  height: 230px;
 }
 .categories {
   display: grid;
