--- a/style.css
+++ b/style.css
@@ -207,7 +207,7 @@ ul{
   color: white;
 }
 
-video{
+video, iframe{
   width: 100%;
   height: 100%;
   object-fit: cover;
@@ -225,6 +225,7 @@ iframe{
   border-top-left-radius: 12px;
   border-top-right-radius: 12px;
   height: 380px;
+  width: 100%;
 }
 
 
@@ -1849,12 +1850,12 @@ strong{
     gap: 5px;
   }
   .left-text button{
-    /* padding: 6px 12px; */
+    padding: 6px 12px;
     border: none;
-    /* border-radius: 6px; */
+    border-radius: 6px;
     color: white;
-    font-size: 12px;
-    font-weight: 500;
+    font-size: 10px;
+    font-weight: 700;
     background-color: var(--main-Color);
   }
   .left-text h2{
@@ -1889,7 +1890,7 @@ strong{
     background-color: red;
     border-radius: 6px;
     color: var(--text-Color);
-    font-size: 12px;
+    font-size: 11px;
     font-weight: 700;
     display: block;
     text-align: center;
@@ -1918,7 +1919,7 @@ strong{
   }
   .head-content .header-content h1{
     /* margin-top: 100px; */
-    font-size: 32px;
+    font-size: 34px;
     font-weight: 800;
     line-height: 55px;
   }
